# speech-llm-speech

./: .gitattributes  .gitignore  Dockerfile  README.md  connect_all_containers.sh  connect_to_docker.sh  docker-compose.yml  docker-compose_separate.yml  ros_process_control.py  start_all_docker.sh  start_docker.sh  start_in_docker.sh  stop_docker.sh
Dockerfiles/: Dockerfile_decision_maker  Dockerfile_google_tts  Dockerfile_whisper_asr
decision_maker/: CMakeLists.txt  decision_maker_node copy.cpp  llm_api_client copy.hpp  package.xml  ros_process_control.py  start_in_docker.sh
decision_maker/include/decision_maker/: llm_api_client.hpp
decision_maker/launch/: decision_maker_launch.py
decision_maker/src/: decision_maker_node.cpp  sentiment_analyzer.py
google_tts/: CMakeLists.txt  package.xml  ros_process_control.py  start_in_docker.sh
google_tts/launch/: google_tts_launch.py
google_tts/scripts/: gtts_synthesizer.py
google_tts/src/: google_tts_node.cpp  tts_service_call.cpp
google_tts/utils/: audio_player.cpp
launch/: google_tts_launch.launch
tempo/: Dockerfile  backup_Dockerfile
whisper_asr/: CMakeLists copy.txt  CMakeLists.txt  package.xml  ros_process_control.py  start_in_docker.sh  whisper_asr_node copy.cpp
whisper_asr/launch/: whisper_asr_launch.py
whisper_asr/src/: whisper_asr_node.cpp  whisper_asr_node_backup.cpp
